# lexe-sidecar-sdk

./: .env.example  .gitignore  BUILD.md  LICENSE  README.md  install.sh
.github/workflows/: ci.yml
replit/: README.md  process-compose.yaml
rust-example/: Cargo.toml  rustfmt.toml
rust-example/src/: main.rs
