[package]
name = "rust-example"
version = "0.0.0"
edition = "2021"

# Empty workspace table ensures this is a standalone crate, not part of any
# parent monorepo workspace.
[workspace]

[dependencies]

# `sdk-sidecar` is the name of the sidecar crate within Lexe's monorepo.
lexe-sidecar = { package = "sdk-sidecar", git = "https://github.com/lexe-app/lexe-public" }

anyhow = "1"
dotenvy = "0.15"
tokio = { version = "1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
] }
tracing = "0.1"
